syntax = "proto3";

option java_multiple_files = true;
option java_package = "{{project_group_id}}";

import "google/protobuf/empty.proto";
package com.stackspot;

service UserEndpoint {
  rpc GetUsers(google.protobuf.Empty) returns (GetUserResponse) {}
}

message GetUserResponse {
  repeated UserResponse userResponseList = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  DataType data_type = 3;
}

enum DataType {
  SAMPLE_ENUM_1 = 0;
  SAMPLE_ENUM_2 = 1;
}
